[package]
name = "sk-rust-web"
version = "0.1.0"
authors = ["sulabhkothari <sulabh.kothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#rocket = "0.4.4"
#rocket_contrib = "0.4.4"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#diesel = { version = "1.0.0", features = ["postgres"] }
#dotenv = "0.9.0"

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]